[package]
name = "hello_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version="0.7.3", features = ["codec"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
