[package]
name = "scraping"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper= { version = "0.12"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
regex = "1"
clap = { version = "3.0.0-beta.2" }

