[project]
name = "tutorial"
version = "0.1.0"
description = "tutorial spider"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "scrapy>=2.15.0",
]

[[tool.uv.index]]
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
