[package]
name = "bookmark2shortcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
scraper = "0.13.0"
image = "0.24"
base64 = "0.13.1"
url = "2"
dirs = "4"
sanitize-filename = "0.4.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
