[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
colored = "2"
jsonxf = "1"
mime = "0.3"
tokio = { version = "1", features = ["full"] }
syntect = "4"
