[package]
name = "xmly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo"] }
# 网络
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.15.0"
regex = "1"
# 日志
log = "0.4.17"
env_logger = "0.9.0"
# 工具
ajax = { path = "../crates/ajax" }

