[package]
name = "reqwest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
# serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# 不推荐混用 executor; 要么只有 tokio 要么用 futures的 block_on
futures = "0.3"

